# ogre-procedural

./: .gitignore  .hgignore  CMakeLists.txt  Contributors.txt  LICENSE  OgreProcedural.pc.in  OgreProceduralConfig.cmake.in  ReadMe.md  ReadMe.txt  annotated.html  classProcedural_1_1Abnormals-members.html  classProcedural_1_1Abnormals.html  classProcedural_1_1Abnormals__inherit__graph.map  classProcedural_1_1Abnormals__inherit__graph.md5  classProcedural_1_1Alpha-members.html  classProcedural_1_1Alpha.html  classProcedural_1_1AlphaMask-members.html  classProcedural_1_1AlphaMask.html  classProcedural_1_1AlphaMask__inherit__graph.map  classProcedural_1_1AlphaMask__inherit__graph.md5  classProcedural_1_1Alpha__inherit__graph.map  classProcedural_1_1Alpha__inherit__graph.md5  classProcedural_1_1BaseSpline2-members.html  classProcedural_1_1BaseSpline2.html  classProcedural_1_1BaseSpline3-members.html  classProcedural_1_1BaseSpline3.html  classProcedural_1_1BezierCurve2-members.html  classProcedural_1_1BezierCurve2.html  classProcedural_1_1BezierCurve2__inherit__graph.map  classProcedural_1_1BezierCurve2__inherit__graph.md5  classProcedural_1_1BezierCurve3-members.html  classProcedural_1_1BezierCurve3.html  classProcedural_1_1BezierCurve3__inherit__graph.map  classProcedural_1_1BezierCurve3__inherit__graph.md5  classProcedural_1_1Blit-members.html  classProcedural_1_1Blit.html  classProcedural_1_1Blit__inherit__graph.map  classProcedural_1_1Blit__inherit__graph.md5  classProcedural_1_1Blur-members.html  classProcedural_1_1Blur.html  (+574 more)
.github/workflows/: ci-build.yml
CMake/: CMakeLists.txt
CMake/Templates/: SDK_CMakeLists.txt.in  SDK_Samples_CMakeLists.txt.in  VisualStudioUserFile.vcproj.user.in  VisualStudioUserFile.vcxproj.user.in  html.cfg.in  plugins.cfg  plugins_d.cfg  resources.cfg  resources_d.cfg  version.txt.in
CMake/Utils/: ProceduralAddTargets.cmake  ProceduralConfigTargets.cmake  ProceduralMacros.cmake
SDK/: buildsdk.bat  buildsdkcodeblocks.bat
docs/: CMakeLists.txt  Doxyfile  ReadMe.txt
docs/illustrations/extrusion/: extruder_generic.lua  extruder_multishape.lua  extruder_rotationtrack.lua  extruder_scaletrack.lua  lathe_anglerange.lua  lathe_generic.lua
docs/illustrations/meshmodifiers/: CalculateNormalsTriangle.lua  CalculateNormalsVertex.lua
docs/illustrations/shapes/: shape_booleansetup.lua  shape_geometricmirror_point.lua  shape_geometricmirror_yaxis.lua  shape_geometricrotate.lua  shape_geometricscale.lua  shape_geometrictranslate.lua  shape_rectangle.lua  shape_thick1.lua  shape_thick2.lua  shape_triangle.lua  shape_triangulation.lua  spline_beziercurve.lua  spline_catmull.lua  spline_cubichermite.lua  spline_helix.lua  spline_kochanekbartels.lua
docs/illustrations/texture/: texture_cell_chess.lua  texture_cell_default.lua  texture_cell_grid.lua  texture_cloud.lua  texture_gradient.lua  texture_image.lua  texture_labyrinth.lua  texture_marble.lua  texture_noise_perlin.lua  texture_noise_white.lua  texture_solid.lua  texture_textile.lua  texture_wood.lua
docs/manual/: ReadMe.txt  extruder.md  howto.md  manual.md  manual.txt  primitives.md  shapepath.md  texture.md
docs/manual/illustrations/: CMakeLists.txt
docs/manual/illustrations/include/: Illustrations.h
docs/manual/illustrations/src/: Illustrations.cpp
include/: Common.h  Main.h  Precompiled.h  Procedural.h  ProceduralBoxGenerator.h  ProceduralCapsuleGenerator.h  ProceduralConeGenerator.h  ProceduralCylinderGenerator.h  ProceduralFactory.h  ProceduralIcoSphereGenerator.h  ProceduralMeshGenerator.h  ProceduralPlaneGenerator.h  ProceduralPrimitiveFactory.h  ProceduralRoot.h  ProceduralRoundedBoxGenerator.h  ProceduralSphereGenerator.h  ProceduralTorusGenerator.h  ProceduralTorusKnotGenerator.h  ProceduralTubeGenerator.h  ProceduralUtils.h  SphereGenerator.h
misc/: .project  ProceduralCodeGen.java
misc/src/procedural/: ProceduralCodeGen.java
samples/: CMakeLists.txt
samples/common/include/: BaseApplication.h
samples/common/src/: BaseApplication.cpp
samples/extrusion/: CMakeLists.txt
samples/extrusion/include/: Extrusion.h
samples/extrusion/src/: Extrusion.cpp
samples/material/: CMakeLists.txt
samples/material/include/: Material.h
samples/material/src/: Material.cpp
samples/media/: Examples.material  luaTest.lua  osm.material
samples/media/xml/: sample-data.osm.xml  simple-tests.xml
samples/osm/: CMakeLists.txt  OSM.cpp  OSM.h
samples/primitives/: CMakeLists.txt
samples/primitives/include/: Main.h  Primitives.h
samples/primitives/src/: Main.cpp  Primitives.cpp
samples/svg/: CMakeLists.txt
samples/svg/include/: Svg.h
samples/svg/src/: Svg.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_17.js  classes_2.js  classes_3.js  (+202 more)
src/: Main.cpp  ProceduralBoxGenerator.cpp  ProceduralCapsuleGenerator.cpp  ProceduralConeGenerator.cpp  ProceduralCylinderGenerator.cpp  ProceduralFactory.cpp  ProceduralIcoSphereGenerator.cpp  ProceduralMeshGenerator.cpp  ProceduralPlaneGenerator.cpp  ProceduralPrimitiveFactory.cpp  ProceduralRoot.cpp  ProceduralSphereGenerator.cpp  ProceduralTorusGenerator.cpp  ProceduralTorusKnotGenerator.cpp  ProceduralTubeGenerator.cpp  SphereGenerator.cpp
tests/: CMakeLists.txt
tests/include/: Tests.h
tests/lua/textures/: Cell_default.lua  Gradient.lua
tests/luatests/: CMakeLists.txt  ogre.i  procedural.i
tests/luatests/include/: LuaTests.h
tests/luatests/src/: LuaTests.cpp
tests/src/: Tests.cpp
tools/ScriptInterpreter/: CMakeLists.txt  ogre.i  procedural.i
tools/ScriptInterpreter/include/: ScriptInterpreter.h
tools/ScriptInterpreter/src/: ScriptInterpreter.cpp
tools/ogitorPlugin/include/: Plugin.h
tools/ogitorPlugin/src/: Plugin.cpp
